@@ -1,5 +1,8 @@
 2010-06-14  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/volume_key.c (do_save): Zero the generated passphrase before
+	freeing it.
+
 	* src/volume_key.c (generate_random_passphrase): Split from do_save ().
 
 2010-06-12  Miloslav Trmač  <mitr@redhat.com>
